src/parser/RouterLangParser.py
# Generated from src/grammar/RouterLang.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class RouterLangParser ( Parser ):

    grammarFileName = "RouterLang.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'topology'", "'{'", "'}'", "'roles'", 
                     "'count'", "':'", "'..'", "'links'", "'--'", "'weight'", 
                     "'devices'", "'['", "']'", "','", "'routing'", "'bgp'", 
                     "'asn'", "'neighbors'", "'auto'", "'route-reflector'", 
                     "'ospf'", "'area'", "'policy'", "'define'", "'rank'", 
                     "'permit'", "'deny'", "'match'", "'prefix'", "'aspath'", 
                     "'community'", "'enter'", "'('", "')'", "'and'", "'exit'", 
                     "'any'", "'le'", "'set'", "'metric'", "'if'", "'.'", 
                     "'=='", "'LIVE'", "'DRAINED'", "'WARM'", "'intent'", 
                     "'route'", "'constraint'", "'primary'", "'backup'", 
                     "'>>'", "'apply-policy'", "'fault-tolerance'", "'scope'", 
                     "'transition'", "'from'", "'to'", "'intermediate'", 
                     "'all'", "'border'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "KW_ALL", "KW_BORDER", "KW_LOCAL_PREF", "IPv4_ADDR", 
                      "CIDR", "INT", "IDENT", "STRING", "WS", "LINE_CMT", 
                      "BLOCK_CMT" ]

    RULE_program = 0
    RULE_topoBlock = 1
    RULE_roleSection = 2
    RULE_roleDecl = 3
    RULE_intRange = 4
    RULE_linkSection = 5
    RULE_linkDecl = 6
    RULE_deviceSection = 7
    RULE_deviceBinding = 8
    RULE_deviceList = 9
    RULE_routingBlock = 10
    RULE_routingBody = 11
    RULE_bgpBlock = 12
    RULE_asnDecl = 13
    RULE_roleAsn = 14
    RULE_neighborDecl = 15
    RULE_peerEntry = 16
    RULE_rrDecl = 17
    RULE_ospfBlock = 18
    RULE_areaDecl = 19
    RULE_roleList = 20
    RULE_policyBlock = 21
    RULE_policyDef = 22
    RULE_policyStanza = 23
    RULE_rankClause = 24
    RULE_actionKw = 25
    RULE_matchClause = 26
    RULE_matchExpr = 27
    RULE_prefixExpr = 28
    RULE_setClause = 29
    RULE_setExpr = 30
    RULE_condClause = 31
    RULE_guardExpr = 32
    RULE_condVal = 33
    RULE_stateVal = 34
    RULE_intentBlock = 35
    RULE_intentDecl = 36
    RULE_routeBody = 37
    RULE_pathSpec = 38
    RULE_pathExpr = 39
    RULE_policyRef = 40
    RULE_ftSpec = 41
    RULE_scopeSpec = 42
    RULE_scopeVal = 43
    RULE_constraintBody = 44
    RULE_transitionBlock = 45

    ruleNames =  [ "program", "topoBlock", "roleSection", "roleDecl", "intRange", 
                   "linkSection", "linkDecl", "deviceSection", "deviceBinding", 
                   "deviceList", "routingBlock", "routingBody", "bgpBlock", 
                   "asnDecl", "roleAsn", "neighborDecl", "peerEntry", "rrDecl", 
                   "ospfBlock", "areaDecl", "roleList", "policyBlock", "policyDef", 
                   "policyStanza", "rankClause", "actionKw", "matchClause", 
                   "matchExpr", "prefixExpr", "setClause", "setExpr", "condClause", 
                   "guardExpr", "condVal", "stateVal", "intentBlock", "intentDecl", 
                   "routeBody", "pathSpec", "pathExpr", "policyRef", "ftSpec", 
                   "scopeSpec", "scopeVal", "constraintBody", "transitionBlock" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    T__41=42
    T__42=43
    T__43=44
    T__44=45
    T__45=46
    T__46=47
    T__47=48
    T__48=49
    T__49=50
    T__50=51
    T__51=52
    T__52=53
    T__53=54
    T__54=55
    T__55=56
    T__56=57
    T__57=58
    T__58=59
    KW_ALL=60
    KW_BORDER=61
    KW_LOCAL_PREF=62
    IPv4_ADDR=63
    CIDR=64
    INT=65
    IDENT=66
    STRING=67
    WS=68
    LINE_CMT=69
    BLOCK_CMT=70

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def topoBlock(self):
            return self.getTypedRuleContext(RouterLangParser.TopoBlockContext,0)


        def routingBlock(self):
            return self.getTypedRuleContext(RouterLangParser.RoutingBlockContext,0)


        def policyBlock(self):
            return self.getTypedRuleContext(RouterLangParser.PolicyBlockContext,0)


        def intentBlock(self):
            return self.getTypedRuleContext(RouterLangParser.IntentBlockContext,0)


        def EOF(self):
            return self.getToken(RouterLangParser.EOF, 0)

        def transitionBlock(self):
            return self.getTypedRuleContext(RouterLangParser.TransitionBlockContext,0)


        def getRuleIndex(self):
            return RouterLangParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = RouterLangParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            self.topoBlock()
            self.state = 93
            self.routingBlock()
            self.state = 94
            self.policyBlock()
            self.state = 95
            self.intentBlock()
            self.state = 97
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==56:
                self.state = 96
                self.transitionBlock()


            self.state = 99
            self.match(RouterLangParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TopoBlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def roleSection(self):
            return self.getTypedRuleContext(RouterLangParser.RoleSectionContext,0)


        def linkSection(self):
            return self.getTypedRuleContext(RouterLangParser.LinkSectionContext,0)


        def deviceSection(self):
            return self.getTypedRuleContext(RouterLangParser.DeviceSectionContext,0)


        def getRuleIndex(self):
            return RouterLangParser.RULE_topoBlock

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTopoBlock" ):
                listener.enterTopoBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTopoBlock" ):
                listener.exitTopoBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTopoBlock" ):
                return visitor.visitTopoBlock(self)
            else:
                return visitor.visitChildren(self)




    def topoBlock(self):

        localctx = RouterLangParser.TopoBlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_topoBlock)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 101
            self.match(RouterLangParser.T__0)
            self.state = 102
            self.match(RouterLangParser.T__1)
            self.state = 103
            self.roleSection()
            self.state = 104
            self.linkSection()
            self.state = 106
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==11:
                self.state = 105
                self.deviceSection()


            self.state = 108
            self.match(RouterLangParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RoleSectionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def roleDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(RouterLangParser.RoleDeclContext)
            else:
                return self.getTypedRuleContext(RouterLangParser.RoleDeclContext,i)


        def getRuleIndex(self):
            return RouterLangParser.RULE_roleSection

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRoleSection" ):
                listener.enterRoleSection(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRoleSection" ):
                listener.exitRoleSection(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRoleSection" ):
                return visitor.visitRoleSection(self)
            else:
                return visitor.visitChildren(self)




    def roleSection(self):

        localctx = RouterLangParser.RoleSectionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_roleSection)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 110
            self.match(RouterLangParser.T__3)
            self.state = 111
            self.match(RouterLangParser.T__1)
            self.state = 113 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 112
                self.roleDecl()
                self.state = 115 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==66):
                    break

            self.state = 117
            self.match(RouterLangParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RoleDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENT(self):
            return self.getToken(RouterLangParser.IDENT, 0)

        def intRange(self):
            return self.getTypedRuleContext(RouterLangParser.IntRangeContext,0)


        def getRuleIndex(self):
            return RouterLangParser.RULE_roleDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRoleDecl" ):
                listener.enterRoleDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRoleDecl" ):
                listener.exitRoleDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRoleDecl" ):
                return visitor.visitRoleDecl(self)
            else:
                return visitor.visitChildren(self)




    def roleDecl(self):

        localctx = RouterLangParser.RoleDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_roleDecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 119
            self.match(RouterLangParser.IDENT)
            self.state = 120
            self.match(RouterLangParser.T__1)
            self.state = 121
            self.match(RouterLangParser.T__4)
            self.state = 122
            self.match(RouterLangParser.T__5)
            self.state = 123
            self.intRange()
            self.state = 124
            self.match(RouterLangParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IntRangeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self, i:int=None):
            if i is None:
                return self.getTokens(RouterLangParser.INT)
            else:
                return self.getToken(RouterLangParser.INT, i)

        def getRuleIndex(self):
            return RouterLangParser.RULE_intRange

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIntRange" ):
                listener.enterIntRange(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIntRange" ):
                listener.exitIntRange(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIntRange" ):
                return visitor.visitIntRange(self)
            else:
                return visitor.visitChildren(self)




    def intRange(self):

        localctx = RouterLangParser.IntRangeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_intRange)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 126
            self.match(RouterLangParser.INT)
            self.state = 129
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==7:
                self.state = 127
                self.match(RouterLangParser.T__6)
                self.state = 128
                self.match(RouterLangParser.INT)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LinkSectionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def linkDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(RouterLangParser.LinkDeclContext)
            else:
                return self.getTypedRuleContext(RouterLangParser.LinkDeclContext,i)


        def getRuleIndex(self):
            return RouterLangParser.RULE_linkSection

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLinkSection" ):
                listener.enterLinkSection(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLinkSection" ):
                listener.exitLinkSection(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLinkSection" ):
                return visitor.visitLinkSection(self)
            else:
                return visitor.visitChildren(self)




    def linkSection(self):

        localctx = RouterLangParser.LinkSectionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_linkSection)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 131
            self.match(RouterLangParser.T__7)
            self.state = 132
            self.match(RouterLangParser.T__1)
            self.state = 134 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 133
                self.linkDecl()
                self.state = 136 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==66):
                    break

            self.state = 138
            self.match(RouterLangParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LinkDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENT(self, i:int=None):
            if i is None:
                return self.getTokens(RouterLangParser.IDENT)
            else:
                return self.getToken(RouterLangParser.IDENT, i)

        def INT(self):
            return self.getToken(RouterLangParser.INT, 0)

        def getRuleIndex(self):
            return RouterLangParser.RULE_linkDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLinkDecl" ):
                listener.enterLinkDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLinkDecl" ):
                listener.exitLinkDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLinkDecl" ):
                return visitor.visitLinkDecl(self)
            else:
                return visitor.visitChildren(self)




    def linkDecl(self):

        localctx = RouterLangParser.LinkDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_linkDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 140
            self.match(RouterLangParser.IDENT)
            self.state = 141
            self.match(RouterLangParser.T__8)
            self.state = 142
            self.match(RouterLangParser.IDENT)
            self.state = 148
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==2:
                self.state = 143
                self.match(RouterLangParser.T__1)
                self.state = 144
                self.match(RouterLangParser.T__9)
                self.state = 145
                self.match(RouterLangParser.T__5)
                self.state = 146
                self.match(RouterLangParser.INT)
                self.state = 147
                self.match(RouterLangParser.T__2)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeviceSectionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def deviceBinding(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(RouterLangParser.DeviceBindingContext)
            else:
                return self.getTypedRuleContext(RouterLangParser.DeviceBindingContext,i)


        def getRuleIndex(self):
            return RouterLangParser.RULE_deviceSection

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeviceSection" ):
                listener.enterDeviceSection(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeviceSection" ):
                listener.exitDeviceSection(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeviceSection" ):
                return visitor.visitDeviceSection(self)
            else:
                return visitor.visitChildren(self)




    def deviceSection(self):

        localctx = RouterLangParser.DeviceSectionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_deviceSection)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 150
            self.match(RouterLangParser.T__10)
            self.state = 151
            self.match(RouterLangParser.T__1)
            self.state = 153 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 152
                self.deviceBinding()
                self.state = 155 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==66):
                    break

            self.state = 157
            self.match(RouterLangParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeviceBindingContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENT(self):
            return self.getToken(RouterLangParser.IDENT, 0)

        def deviceList(self):
            return self.getTypedRuleContext(RouterLangParser.DeviceListContext,0)


        def getRuleIndex(self):
            return RouterLangParser.RULE_deviceBinding

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeviceBinding" ):
                listener.enterDeviceBinding(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeviceBinding" ):
                listener.exitDeviceBinding(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeviceBinding" ):
                return visitor.visitDeviceBinding(self)
            else:
                return visitor.visitChildren(self)




    def deviceBinding(self):

        localctx = RouterLangParser.DeviceBindingContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_deviceBinding)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 159
            self.match(RouterLangParser.IDENT)
            self.state = 160
            self.match(RouterLangParser.T__5)
            self.state = 161
            self.match(RouterLangParser.T__11)
            self.state = 162
            self.deviceList()
            self.state = 163
            self.match(RouterLangParser.T__12)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeviceListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENT(self, i:int=None):
            if i is None:
                return self.getTokens(RouterLangParser.IDENT)
            else:
                return self.getToken(RouterLangParser.IDENT, i)

        def getRuleIndex(self):
            return RouterLangParser.RULE_deviceList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeviceList" ):
                listener.enterDeviceList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeviceList" ):
                listener.exitDeviceList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeviceList" ):
                return visitor.visitDeviceList(self)
            else:
                return visitor.visitChildren(self)




    def deviceList(self):

        localctx = RouterLangParser.DeviceListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_deviceList)
        self._la = 0 # Token type
        try:
            self.state = 176
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 165
                self.match(RouterLangParser.IDENT)
                self.state = 170
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==14:
                    self.state = 166
                    self.match(RouterLangParser.T__13)
                    self.state = 167
                    self.match(RouterLangParser.IDENT)
                    self.state = 172
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 173
                self.match(RouterLangParser.IDENT)
                self.state = 174
                self.match(RouterLangParser.T__6)
                self.state = 175
                self.match(RouterLangParser.IDENT)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RoutingBlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def routingBody(self):
            return self.getTypedRuleContext(RouterLangParser.RoutingBodyContext,0)


        def getRuleIndex(self):
            return RouterLangParser.RULE_routingBlock

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRoutingBlock" ):
                listener.enterRoutingBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRoutingBlock" ):
                listener.exitRoutingBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRoutingBlock" ):
                return visitor.visitRoutingBlock(self)
            else:
                return visitor.visitChildren(self)




    def routingBlock(self):

        localctx = RouterLangParser.RoutingBlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_routingBlock)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 178
            self.match(RouterLangParser.T__14)
            self.state = 179
            self.match(RouterLangParser.T__1)
            self.state = 180
            self.routingBody()
            self.state = 181
            self.match(RouterLangParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RoutingBodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def bgpBlock(self):
            return self.getTypedRuleContext(RouterLangParser.BgpBlockContext,0)


        def ospfBlock(self):
            return self.getTypedRuleContext(RouterLangParser.OspfBlockContext,0)


        def getRuleIndex(self):
            return RouterLangParser.RULE_routingBody

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRoutingBody" ):
                listener.enterRoutingBody(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRoutingBody" ):
                listener.exitRoutingBody(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRoutingBody" ):
                return visitor.visitRoutingBody(self)
            else:
                return visitor.visitChildren(self)




    def routingBody(self):

        localctx = RouterLangParser.RoutingBodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_routingBody)
        self._la = 0 # Token type
        try:
            self.state = 191
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [16]:
                self.enterOuterAlt(localctx, 1)
                self.state = 183
                self.bgpBlock()
                self.state = 185
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==21:
                    self.state = 184
                    self.ospfBlock()


                pass
            elif token in [21]:
                self.enterOuterAlt(localctx, 2)
                self.state = 187
                self.ospfBlock()
                self.state = 189
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==16:
                    self.state = 188
                    self.bgpBlock()


                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BgpBlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def asnDecl(self):
            return self.getTypedRuleContext(RouterLangParser.AsnDeclContext,0)


        def neighborDecl(self):
            return self.getTypedRuleContext(RouterLangParser.NeighborDeclContext,0)


        def rrDecl(self):
            return self.getTypedRuleContext(RouterLangParser.RrDeclContext,0)


        def getRuleIndex(self):
            return RouterLangParser.RULE_bgpBlock

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBgpBlock" ):
                listener.enterBgpBlock(self)
